feat: resposnive styles

--- a/index.html
+++ b/index.html
@@ -1,12 +1,281 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./font.css">
     <title>Document</title>
 </head>
+
 <body>
-    
+    <header class="header">
+        <div class="container">
+            <div class="header__inner">
+                <a href="/index.html">
+                    <img src="./images/relocate.svg" alt="logo">
+                </a>
+                <nav class="header__nav">
+                    <ul class="menu">
+                        <li>
+                            <a class="menu__link" href="/index.html">Destinations</a>
+                        </li>
+                        <li>
+                            <a class="menu__link" href="/index.html">Deals</a>
+                        </li>
+                        <li>
+                            <a class="menu__link" href="./index.html">Explore</a>
+                        </li>
+                        <li>
+                            <a class="menu__link" href="./index.html">Resources</a>
+                        </li>
+                    </ul>
+                </nav>
+                <button class="header__button">
+                    <img src="./images/burger-icon.svg" alt="burger-icon">
+                </button>
+            </div>
+        </div>
+    </header>
+    <section class="hero">
+        <div class="container">
+            <div class="hero__inner">
+                <div class="hero__content">
+                    <span class="hero__subtitle">make the right</span>
+                    <h1 class="hero__title">move.</h1>
+                </div>
+                <div class="hero__destination">
+                    <a class="hero__arrow-wrapper" href="">
+                        <img src="./images/to-bottom-arrow.svg" alt="to bottom arrow">
+                    </a>
+                    <span>EXPLORE
+                        DESTINATIONS</span>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="destinations">
+        <div class="container">
+            <span class="destinations__subtitle">top</span>
+            <h2 class="destinations__title">destinations</h2>
+            <p class="destinations__description">It’s hard enough deciding to move, you don’t have to worry about where
+                to move to. These are some of the most popular
+                and best locations to move to based on a number of factors.</p>
+            <div class="destinations__grid">
+                <div class="destinations__grid-item">
+                    <img class="destinations__image" src="./images/paraty.png" alt="Paraty">
+                    <div class="destinations__shadow">
+                        <div class="destinations__content">
+                            <h2 class="destinations__name">Paraty</h2>
+                            <span class="destinations__forename">Rio de Janeiro</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="destinations__grid-item">
+                    <img class="destinations__image" src="./images/morretes.png" alt="Morretes">
+                    <div class="destinations__shadow">
+                        <div class="destinations__content">
+                            <h2 class="destinations__name">Morretes</h2>
+                            <span class="destinations__forename">Paraná</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="destinations__grid-item">
+                    <img class="destinations__image" src="./images/olinda.png" alt="Olinda">
+                    <div class="destinations__shadow">
+                        <div class="destinations__content">
+                            <h2 class="destinations__name">Olinda</h2>
+                            <span class="destinations__forename">Pernambuco</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="destinations__grid-item">
+                    <img class="destinations__image" src="./images/gramado.png" alt="Gramado">
+                    <div class="destinations__shadow">
+                        <div class="destinations__content">
+                            <h2 class="destinations__name">Gramado</h2>
+                            <span class="destinations__forename">Rio Grande do Sul</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="more-destinations">
+        <div class="container">
+            <span class="more-destinations__subtitle">more</span>
+            <h2 class="more-destinations__title">destinations</h2>
+            <p class="more-destinations__description">Your peace of mind doesn’t have to be tied to where everyone else
+                is. We have a good number of travel and relocation
+                destinations. Take your time and find the perfect one for you.</p>
+            <div class="more-destinations__grid">
+                <div class="more-destinations__grid-item">
+                    <img class="more-destinations__image" src="./images/Rectangle 33.png" alt="France">
+                    <div class="more-destinations__shadow">
+                        <div class="more-destinations__content">
+                            <h2 class="more-destinations__name">Estaing</h2>
+                            <span class="more-destinations__forename">France</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="more-destinations__grid-item">
+                    <img class="more-destinations__image" src="./images/Rectangle 34.png" alt="Iceland">
+                    <div class="more-destinations__shadow">
+                        <div class="more-destinations__content">
+                            <h2 class="more-destinations__name">Vík í Mýrda</h2>
+                            <span class="more-destinations__forename">Iceland</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="more-destinations__grid-item">
+                    <img class="more-destinations__image" src="./images/Rectangle 37.png" alt="Norway">
+                    <div class="more-destinations__shadow">
+                        <div class="more-destinations__content">
+                            <h2 class="more-destinations__name">Hamnoy village</h2>
+                            <span class="more-destinations__forename">Norway.</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="more-destinations__grid-item">
+                    <img class="more-destinations__image" src="./images/Rectangle 36.png" alt="JAMAICA">
+                    <div class="more-destinations__shadow">
+                        <div class="more-destinations__content">
+                            <h2 class="more-destinations__name">Montego Bay</h2>
+                            <span class="more-destinations__forename">JAMAICA</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="beach-view"></section>
+    <footer class="footer">
+        <div class="container">
+            <div class="footer-menu">
+                <div class="footer-table">
+                    <h2 class="footer-menu__title">Legal</h2>
+                    <ul>
+                        <li class="footer-menu__item">
+                            <a class="footer-menu__link" href="">MSA Self Managed</a>
+                        </li>
+                        <li class="footer-menu__item">
+                            <a class="footer-menu__link" href="">Privacy</a>
+                        </li>
+                        <li class="footer-menu__item">
+                            <a class="footer-menu__link" href="">GDPR</a>
+                        </li>
+                        <li class="footer-menu__item">
+                            <a class="footer-menu__link" href="">Guidelines for Law Enforcement</a>
+                        </li>
+                        <li class="footer-menu__item">
+                            <a class="footer-menu__link" href="">Terms of Service</a>
+                        </li>
+                        <li class="footer-menu__item">
+                            <a class="footer-menu__link" href="">Manage Cookies</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="footer-table">
+                    <h2 class="footer-menu__title">Product</h2>
+                    <ul>
+                        <li class="footer-menu__item">
+                            <a class="footer-menu__link" href="">Why move?
+                            </a>
+                        </li>
+                        <li class="footer-menu__item">
+                            <a class="footer-menu__link" href="">Features
+                            </a>
+                        </li>
+                        <li class="footer-menu__item">
+                            <a class="footer-menu__link" href="">Omnichannel
+                            </a>
+                        </li>
+                        <li class="footer-menu__item">
+                            <a class="footer-menu__link" href="">Community
+                            </a>
+                        </li>
+                        <li class="footer-menu__item">
+                            <a class="footer-menu__link" href="">Webinars
+                            </a>
+                        </li>
+                        <li class="footer-menu__item">
+                            <a class="footer-menu__link" href="">Marketplace</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="footer-table">
+                    <h2 class="footer-menu__title">company</h2>
+                    <ul>
+                        <li class="footer-menu__item">
+                            <a class="footer-menu__link" href="">Team
+                            </a>
+                        </li>
+                        <li class="footer-menu__item">
+                            <a class="footer-menu__link" href="">
+                                About
+
+                            </a>
+                        </li>
+                        <li class="footer-menu__item"> 
+                            <a class="footer-menu__link" href="">
+                                Jobs
+
+                            </a>
+                        </li>
+                        <li class="footer-menu__item">
+                            <a class="footer-menu__link" href="">
+                                Partners
+
+                            </a>
+                        </li>
+                        <li class="footer-menu__item">
+                            <a class="footer-menu__link" href="">
+                                Press
+
+                            </a>
+                        </li>
+                        <li class="footer-menu__item">
+                            <a class="footer-menu__link" href="">
+                                Blog
+
+                            </a>
+                        </li>
+                        <li class="footer-menu__item">
+                            <a class="footer-menu__link" href="">
+                                Newsletter
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="footer-table">
+                    <ul class="social-menu">
+                        <li>
+                            <a href="">
+                                <img src="./images/facebook.svg" alt="">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <img src="./images/twitter.svg" alt="">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <img src="./images/instagram.svg" alt="">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <img src="./images/linkedin.svg" alt="">
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
+
 </html>
