--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Relocate tour agency">
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="./font.css">
     <title>Document</title>
@@ -14,22 +15,22 @@
     <header class="header">
         <div class="container">
             <div class="header__inner">
-                <a href="/index.html">
+                <a href="/index.html" aria-label="header logo">
                     <img src="./images/relocate.svg" alt="logo">
                 </a>
                 <nav class="header__nav">
                     <ul class="menu">
                         <li>
-                            <a class="menu__link" href="/index.html">Destinations</a>
+                            <a class="menu__link" href="/index.html" aria-label="destinations">Destinations</a>
                         </li>
                         <li>
-                            <a class="menu__link" href="/index.html">Deals</a>
+                            <a class="menu__link" href="/index.html" aria-label="deals">Deals</a>
                         </li>
                         <li>
-                            <a class="menu__link" href="./index.html">Explore</a>
+                            <a class="menu__link" href="./index.html" aria-label="explore">Explore</a>
                         </li>
                         <li>
-                            <a class="menu__link" href="./index.html">Resources</a>
+                            <a class="menu__link" href="./index.html" aria-label="resources">Resources</a>
                         </li>
                     </ul>
                 </nav>
@@ -47,7 +48,7 @@
                     <h1 class="hero__title">move.</h1>
                 </div>
                 <div class="hero__destination">
-                    <a class="hero__arrow-wrapper" href="">
+                    <a class="hero__arrow-wrapper" href="/" aria-label="to bottom arrow">
                         <img src="./images/to-bottom-arrow.svg" alt="to bottom arrow">
                     </a>
                     <span>EXPLORE
@@ -158,22 +159,22 @@
                     <h2 class="footer-menu__title">Legal</h2>
                     <ul>
                         <li class="footer-menu__item">
-                            <a class="footer-menu__link" href="">MSA Self Managed</a>
+                            <a class="footer-menu__link" href="/" aria-label="MSA Self Managed">MSA Self Managed</a>
                         </li>
                         <li class="footer-menu__item">
-                            <a class="footer-menu__link" href="">Privacy</a>
+                            <a class="footer-menu__link" href="/" aria-label="Privacy">Privacy</a>
                         </li>
                         <li class="footer-menu__item">
-                            <a class="footer-menu__link" href="">GDPR</a>
+                            <a class="footer-menu__link" href="/" aria-label="GDPR">GDPR</a>
                         </li>
                         <li class="footer-menu__item">
-                            <a class="footer-menu__link" href="">Guidelines for Law Enforcement</a>
+                            <a class="footer-menu__link" href="/" aria-label="Guidelines for Law Enforcement">Guidelines for Law Enforcement</a>
                         </li>
                         <li class="footer-menu__item">
-                            <a class="footer-menu__link" href="">Terms of Service</a>
+                            <a class="footer-menu__link" href="/" aria-label="Terms of Service">Terms of Service</a>
                         </li>
                         <li class="footer-menu__item">
-                            <a class="footer-menu__link" href="">Manage Cookies</a>
+                            <a class="footer-menu__link" href="/" aria-label="manage cookies">Manage Cookies</a>
                         </li>
                     </ul>
                 </div>
@@ -181,27 +182,27 @@
                     <h2 class="footer-menu__title">Product</h2>
                     <ul>
                         <li class="footer-menu__item">
-                            <a class="footer-menu__link" href="">Why move?
+                            <a class="footer-menu__link" href="/" aria-label="why move">Why move?
                             </a>
                         </li>
                         <li class="footer-menu__item">
-                            <a class="footer-menu__link" href="">Features
+                            <a class="footer-menu__link" href="/" aria-label="features">Features
                             </a>
                         </li>
                         <li class="footer-menu__item">
-                            <a class="footer-menu__link" href="">Omnichannel
+                            <a class="footer-menu__link" href="/" aria-label="omnichannel">Omnichannel
                             </a>
                         </li>
                         <li class="footer-menu__item">
-                            <a class="footer-menu__link" href="">Community
+                            <a class="footer-menu__link" href="/" aria-label="community">Community
                             </a>
                         </li>
                         <li class="footer-menu__item">
-                            <a class="footer-menu__link" href="">Webinars
+                            <a class="footer-menu__link" href="/" aria-label="webinars">Webinars
                             </a>
                         </li>
                         <li class="footer-menu__item">
-                            <a class="footer-menu__link" href="">Marketplace</a>
+                            <a class="footer-menu__link" href="/" aria-label="marketplace">Marketplace</a>
                         </li>
                     </ul>
                 </div>
@@ -209,41 +210,41 @@
                     <h2 class="footer-menu__title">company</h2>
                     <ul>
                         <li class="footer-menu__item">
-                            <a class="footer-menu__link" href="">Team
+                            <a class="footer-menu__link" href="/" aria-label="team">Team
                             </a>
                         </li>
                         <li class="footer-menu__item">
-                            <a class="footer-menu__link" href="">
+                            <a class="footer-menu__link" href="/" aria-label="about">
                                 About
 
                             </a>
                         </li>
                         <li class="footer-menu__item"> 
-                            <a class="footer-menu__link" href="">
+                            <a class="footer-menu__link" href="/" aria-label="jobs">
                                 Jobs
 
                             </a>
                         </li>
                         <li class="footer-menu__item">
-                            <a class="footer-menu__link" href="">
+                            <a class="footer-menu__link" href="/" aria-label="partners">
                                 Partners
 
                             </a>
                         </li>
                         <li class="footer-menu__item">
-                            <a class="footer-menu__link" href="">
+                            <a class="footer-menu__link" href="/" aria-label="press">
                                 Press
 
                             </a>
                         </li>
                         <li class="footer-menu__item">
-                            <a class="footer-menu__link" href="">
+                            <a class="footer-menu__link" href="/" aria-label="blog">
                                 Blog
 
                             </a>
                         </li>
                         <li class="footer-menu__item">
-                            <a class="footer-menu__link" href="">
+                            <a class="footer-menu__link" href="/" aria-label="newsletter">
                                 Newsletter
                             </a>
                         </li>
@@ -252,23 +253,23 @@
                 <div class="footer-table">
                     <ul class="social-menu">
                         <li>
-                            <a href="">
-                                <img src="./images/facebook.svg" alt="">
+                            <a href="https://www.facebook.com/" target="_blank">
+                                <img src="./images/facebook.svg" alt="Facebook">
                             </a>
                         </li>
                         <li>
-                            <a href="">
-                                <img src="./images/twitter.svg" alt="">
+                            <a href="https://twitter.com/" target="_blank">
+                                <img src="./images/twitter.svg" alt="Twitter">
                             </a>
                         </li>
                         <li>
-                            <a href="">
-                                <img src="./images/instagram.svg" alt="">
+                            <a href="https://www.instagram.com/" target="_blank">
+                                <img src="./images/instagram.svg" alt="instagram">
                             </a>
                         </li>
                         <li>
-                            <a href="">
-                                <img src="./images/linkedin.svg" alt="">
+                            <a href="https://www.linkedin.com/feed/" target="_blank">
+                                <img src="./images/linkedin.svg" alt="Linkedin">
                             </a>
                         </li>
                     </ul>
